--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>تواصل معنا – Khotwa</title>
   <style>
-    :root{--primary:#1e40af;--ring:#e5e7eb;--card:#f8fafc;--text:#0f172a;--muted:#6b7280}
+    :root{--primary:#1e40af;--primary-600:#1d4ed8;--ring:#e5e7eb;--card:#f8fafc;--text:#0f172a;--muted:#6b7280}
     *{box-sizing:border-box}
     html,body{height:100%}
     body{margin:0;font-family:"Segoe UI",system-ui,-apple-system,Tahoma,Arial,sans-serif;color:var(--text);background:#fff}
@@ -13,6 +13,7 @@
     .container{width:min(1120px,92%);margin-inline:auto}
     :focus-visible{outline:3px solid color-mix(in oklab, var(--primary), #fff 40%);outline-offset:2px;border-radius:8px}
 
+    /* Navbar */
     .navbar{position:sticky;top:0;background:#fff;border-bottom:1px solid var(--ring);z-index:40}
     .nav-inner{display:flex;justify-content:space-between;align-items:center;padding:.8rem 0}
     .brand{display:flex;align-items:center;gap:.8rem;font-weight:700}
@@ -23,22 +24,41 @@
 
     section{padding:2rem 0}
     .muted{color:var(--muted)}
-    form{display:grid;gap:.9rem;background:#fff;border:1px solid var(--ring);border-radius:16px;padding:1rem}
-    label{font-size:.95rem}
-    input,textarea{width:100%;padding:.7rem;border:1px solid var(--ring);border-radius:10px;font:inherit}
-    button{padding:.7rem 1rem;border-radius:10px;border:1px solid var(--ring);background:var(--primary);color:#fff;cursor:pointer}
     .grid{display:grid;gap:1rem;grid-template-columns:1fr 1fr}
     @media(max-width:980px){.grid{grid-template-columns:1fr}}
+
+    /* Form */
+    form{display:grid;gap:.9rem;background:#fff;border:1px solid var(--ring);border-radius:16px;padding:1rem}
+    .field{display:grid;gap:.35rem}
+    label{display:flex;align-items:center;gap:.45rem;font-size:.95rem}
+    .icon{width:18px;height:18px;color:var(--primary);flex:none}
+    input,textarea{width:100%;padding:.7rem;border:1px solid var(--ring);border-radius:10px;font:inherit}
+    button{padding:.7rem 1rem;border-radius:10px;border:1px solid var(--ring);background:var(--primary);color:#fff;cursor:pointer;font-weight:600}
+    button:hover{background:var(--primary-600)}
     iframe{width:100%;height:360px;border:1px solid var(--ring);border-radius:16px}
+
+    /* Popup Notification */
+    .popup{
+      position:fixed;top:20px;right:20px;
+      padding:.9rem 1.2rem;border-radius:10px;
+      font-size:.95rem;font-weight:600;
+      box-shadow:0 4px 18px rgba(0,0,0,.12);
+      display:none;z-index:1000;
+      animation:fadeIn .3s ease;
+    }
+    .popup.success{background:#16a34a;color:#fff}
+    .popup.error{background:#dc2626;color:#fff}
+    @keyframes fadeIn{from{opacity:0;transform:translateY(-10px)}to{opacity:1;transform:translateY(0)}}
 
     footer{border-top:1px solid var(--ring);padding:1rem 0;margin-top:1rem}
   </style>
 </head>
 <body>
+  <!-- Navbar -->
   <nav class="navbar" aria-label="الشريط العلوي">
     <div class="container nav-inner">
-      <a class="brand" href="/index.html">
-        <img src="https://g.top4top.io/p_3516rfttb1.jpg" alt="شعار مجلس طلاب خطوة" class="logo" width="40" height="40">
+      <a class="brand" href="/index.html" aria-label="العودة للرئيسية">
+        <img src="https://g.top4top.io/p_3516rfttb1.jpg" alt="شعار مجلس طلاب خطوة" class="logo">
         <span>مجلس طلاب خطوة – La Trobe</span>
       </a>
       <div class="nav-links">
@@ -52,49 +72,98 @@
     </div>
   </nav>
 
+  <!-- Content -->
   <main class="container">
     <section class="grid">
+      <!-- Form -->
       <div>
         <h1>راسلنا</h1>
         <p class="muted">يسعدنا استقبال أسئلتك واقتراحاتك.</p>
-        <form action="https://formspree.io/f/mblkegbr" method="POST">
-          <div>
-            <label for="name">الاسم الكامل</label>
+
+        <form id="contact-form" action="https://formspree.io/f/mblkegbr" method="POST">
+          <div class="field">
+            <label for="name">
+              <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><circle cx="12" cy="7" r="4"/><path d="M5.5 21a6.5 6.5 0 0113 0"/></svg>
+              الاسم الكامل
+            </label>
             <input id="name" name="name" type="text" placeholder="الاسم الكامل" required>
           </div>
-          <div>
-            <label for="email">البريد الإلكتروني</label>
-            <input id="email" name="email" type="email" placeholder="example@email.com" required>
+
+          <div class="field">
+            <label for="email">
+              <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M4 6h16v12H4z"/><path d="M22 6l-10 7L2 6"/></svg>
+              البريد الإلكتروني
+            </label>
+            <input id="email" name="email" type="email" dir="ltr" placeholder="example@email.com" required>
           </div>
-          <div>
-            <label for="message">رسالتك</label>
+
+          <div class="field">
+            <label for="message">
+              <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M21 12a8 8 0 10-15.5 3.5L3 21l5-1.5A8 8 0 1021 12z"/></svg>
+              رسالتك
+            </label>
             <textarea id="message" name="message" rows="6" placeholder="اكتب رسالتك هنا" required></textarea>
           </div>
-          <input type="hidden" name="_subject" value="رسالة جديدة من موقع المجلس">
+
           <button type="submit">إرسال</button>
         </form>
       </div>
 
+      <!-- Map -->
       <div>
-        <h2>موقعنا – Bundoora</h2>
+        <h2 style="display:flex;align-items:center;gap:.5rem">
+          <svg class="icon" style="width:20px;height:20px" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M12 22s7-4.35 7-11a7 7 0 10-14 0c0 6.65 7 11 7 11z"/><circle cx="12" cy="11" r="3"/></svg>
+          موقعنا – Bundoora
+        </h2>
         <p class="muted">La Trobe University – Bundoora Campus</p>
         <iframe
           title="خريطة موقع La Trobe University – Bundoora"
           loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade"
           src="https://www.google.com/maps?hl=ar&q=La+Trobe+University,+Bundoora&output=embed&t=m&z=15">
         </iframe>
       </div>
     </section>
   </main>
 
+  <!-- Footer -->
   <footer>
-    <div class="container" style="display:flex;justify-content:space-between;gap:1rem;align-items:center">
+    <div class="container" style="display:flex;justify-content:space-between;align-items:center">
       <div class="muted">© <span id="year"></span> Khotwa Student Council</div>
       <a href="https://www.instagram.com/khotwa.sc/" target="_blank" rel="noopener noreferrer">Instagram</a>
     </div>
   </footer>
 
-  <script>document.getElementById('year').textContent=new Date().getFullYear();</script>
+  <!-- Popup -->
+  <div id="popup" class="popup"></div>
+
+  <script>
+    document.getElementById('year').textContent=new Date().getFullYear();
+
+    const form=document.getElementById('contact-form');
+    const popup=document.getElementById('popup');
+
+    form.addEventListener('submit',async(e)=>{
+      e.preventDefault();
+      const data=new FormData(form);
+      try{
+        const res=await fetch(form.action,{method:'POST',body:data,headers:{'Accept':'application/json'}});
+        if(res.ok){
+          showPopup("✅ تم إرسال رسالتك بنجاح","success");
+          form.reset();
+        }else{
+          showPopup("❌ حدث خطأ أثناء الإرسال","error");
+        }
+      }catch(err){
+        showPopup("❌ لم نتمكن من الاتصال بالخادم","error");
+      }
+    });
+
+    function showPopup(msg,type){
+      popup.textContent=msg;
+      popup.className="popup "+type;
+      popup.style.display="block";
+      setTimeout(()=>{popup.style.display="none"},4000);
+    }
+  </script>
 </body>
 </html>
