--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
   <main class="container">
     <section>
       <h1>من نحن</h1>
-      <p class="muted">مجلس طلاب خطوة يمثل طلاب برنامج خطوة في جامعة لا تروب – ملبورن.</p>
+      <p class="muted">مجلس طلاب خطوة يمثل طلاب برنامج خطوة في أستراليا.</p>
 
       <div class="grid grid-3">
         <!-- الرئيس -->
