--- a/index.html
+++ b/index.html
@@ -1,15 +1,12 @@
 <!doctype html>
-<html lang="ar" dir="rtl" class="no-js">
+<html lang="ar" dir="rtl">
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>مجلس طلاب خطوة – Khotwa</title>
   <meta name="description" content="مجلس طلاب خطوة يمثل طلاب برنامج خطوة في جامعة لا تروب – ملبورن. فعاليات، أخبار، وانضمام للمجلس.">
   <style>
-    :root{
-      --primary:#1e40af;--primary-600:#1d4ed8;--ring:#e5e7eb;
-      --card:#f8fafc;--text:#0f172a;--muted:#6b7280
-    }
+    :root{--primary:#1e40af;--primary-600:#1d4ed8;--ring:#e5e7eb;--card:#f8fafc;--text:#0f172a;--muted:#6b7280}
     *{box-sizing:border-box}
     html,body{height:100%}
     body{margin:0;font-family:"Segoe UI",system-ui,-apple-system,Tahoma,Arial,sans-serif;color:var(--text);background:#fff}
@@ -24,7 +21,7 @@
     .nav-links{display:flex;gap:1rem;align-items:center}
     .nav-links a{padding:.5rem .75rem;border-radius:10px}
     .nav-links a:hover{background:var(--card)}
-    .lang-toggle{padding:.5rem .75rem;border-radius:10px;background:var(--primary);color:#fff;border:1px solid var(--ring);cursor:pointer}
+    .lang-toggle{padding:.45rem .75rem;border:1px solid var(--ring);background:#fff;border-radius:10px;cursor:pointer}
 
     /* Hero */
     header.hero{background:linear-gradient(180deg,#fff 0,#f5f7ff 100%);border-bottom:1px solid var(--ring)}
@@ -52,19 +49,6 @@
     /* Footer */
     footer{border-top:1px solid var(--ring);background:#fff}
     .foot{display:flex;justify-content:space-between;gap:1rem;align-items:center;padding:1.2rem 0}
-
-    /* ===== i18n (ثنائي اللغة) =====
-       افتراضياً نعرض العربي ونخفي الإنجليزي.
-       عند إضافة الكلاس .en إلى <html>:
-       - نعرض الإنجليزي
-       - ونخفي العربي
-       نستخدم display:revert; عشان العنصر يرجع نوع عرضه الطبيعي (block/inline). */
-    [lang="en"]{display:none}
-    .en [lang="en"]{display:revert}
-    .en [lang="ar"]{display:none}
-
-    /* لو كان الجافاسكربت مطفّى، نخلي الإنجليزي مخفي وعادي. */
-    .no-js [lang="en"]{display:none}
   </style>
 </head>
 <body>
@@ -73,17 +57,20 @@
     <div class="container nav-inner">
       <a class="brand" href="/index.html" aria-label="العودة للرئيسية">
         <img src="https://g.top4top.io/p_3516rfttb1.jpg" class="logo" alt="شعار مجلس طلاب خطوة" width="40" height="40">
-        <span lang="ar">مجلس طلاب خطوة – La Trobe</span>
-        <span lang="en">Khotwa Student Council – La Trobe</span>
+        <span data-lang="ar">مجلس طلاب خطوة – La Trobe</span>
+        <span data-lang="en" hidden>Khotwa Student Council – La Trobe</span>
       </a>
 
       <div class="nav-links">
-        <a href="/about.html"><span lang="ar">من نحن</span><span lang="en">About</span></a>
-        <a href="/news.html"><span lang="ar">الأخبار</span><span lang="en">News</span></a>
-        <a href="/events.html"><span lang="ar">الفعاليات</span><span lang="en">Events</span></a>
-        <a href="/calendar.html"><span lang="ar">التقويم</span><span lang="en">Calendar</span></a>
-        <a href="/resources.html"><span lang="ar">الموارد</span><span lang="en">Resources</span></a>
-        <a href="/contact.html" class="nav-cta"><span lang="ar">تواصل</span><span lang="en">Contact</span></a>
+        <a href="/about.html"><span data-lang="ar">من نحن</span><span data-lang="en" hidden>About</span></a>
+        <a href="/news.html"><span data-lang="ar">الأخبار</span><span data-lang="en" hidden>News</span></a>
+        <a href="/events.html"><span data-lang="ar">الفعاليات</span><span data-lang="en" hidden>Events</span></a>
+        <a href="/calendar.html"><span data-lang="ar">التقويم</span><span data-lang="en" hidden>Calendar</span></a>
+        <a href="/resources.html"><span data-lang="ar">الموارد</span><span data-lang="en" hidden>Resources</span></a>
+        <a href="/contact.html" class="nav-cta">
+          <span data-lang="ar">تواصل</span>
+          <span data-lang="en" hidden>Contact</span>
+        </a>
         <button id="lang-toggle" class="lang-toggle" type="button">English</button>
       </div>
     </div>
@@ -93,20 +80,20 @@
   <header class="hero">
     <div class="container hero-inner">
       <div>
-        <h1 lang="ar">مجلس طلاب خطوة – صوت الطلاب وشريك الجامعة</h1>
-        <h1 lang="en">Khotwa Student Council – Students’ Voice and University Partner</h1>
+        <h1 data-lang="ar">مجلس طلاب خطوة – صوت الطلاب وشريك الجامعة</h1>
+        <h1 data-lang="en" hidden>Khotwa Student Council – Students’ Voice and University Partner</h1>
 
-        <p lang="ar">نمكّن طلاب برنامج خطوة أكاديميًا واجتماعيًا وثقافيًا، ونبني الجسر بين الطلاب وإدارة الجامعة بفعاليات نوعية وخدمات موجهة.</p>
-        <p lang="en">We empower Khotwa students academically, socially, and culturally, building bridges with the university through quality events and tailored services.</p>
+        <p data-lang="ar">نمكّن طلاب برنامج خطوة أكاديميًا واجتماعيًا وثقافيًا، ونبني الجسر بين الطلاب وإدارة الجامعة بفعاليات نوعية وخدمات موجهة.</p>
+        <p data-lang="en" hidden>We empower Khotwa students academically, socially, and culturally, building bridges with the university through quality events and tailored services.</p>
 
         <div class="cta-row">
           <a href="/contact.html" class="btn btn-primary">
-            <span lang="ar">قدّم للعضوية</span>
-            <span lang="en">Apply for Membership</span>
+            <span data-lang="ar">قدّم للعضوية</span>
+            <span data-lang="en" hidden>Apply for Membership</span>
           </a>
           <a href="/events.html" class="btn btn-outline">
-            <span lang="ar">شاهد أقرب الفعاليات</span>
-            <span lang="en">See Upcoming Events</span>
+            <span data-lang="ar">شاهد أقرب الفعاليات</span>
+            <span data-lang="en" hidden>See Upcoming Events</span>
           </a>
         </div>
       </div>
@@ -120,81 +107,81 @@
   </header>
 
   <!-- About quick -->
-  <section aria-labelledby="about-h">
+  <section aria-labelledby="about-ar">
     <div class="container">
       <div class="section-head">
-        <h2 id="about-h" lang="ar">من نحن</h2>
-        <h2 id="about-h" lang="en">About Us</h2>
+        <h2 id="about-ar" data-lang="ar">من نحن</h2>
+        <h2 id="about-en" data-lang="en" hidden>About Us</h2>
         <a class="muted" href="/about.html">
-          <span lang="ar">المزيد</span>
-          <span lang="en">Learn more</span>
+          <span data-lang="ar">المزيد</span>
+          <span data-lang="en" hidden>Learn more</span>
         </a>
       </div>
 
       <div class="grid grid-2">
         <article class="card">
-          <h3 lang="ar">الرؤية</h3>
-          <h3 lang="en">Vision</h3>
-          <p lang="ar">دعم العملية التعليمية وخدمة المجتمع الجامعي.</p>
-          <p lang="en">Support the learning journey and serve our university community.</p>
+          <h3 data-lang="ar">الرؤية</h3>
+          <h3 data-lang="en" hidden>Vision</h3>
+          <p data-lang="ar">دعم العملية التعليمية وخدمة المجتمع الجامعي.</p>
+          <p data-lang="en" hidden>Support the learning journey and serve our university community.</p>
         </article>
 
         <article class="card">
-          <h3 lang="ar">الرسالة</h3>
-          <h3 lang="en">Mission</h3>
-          <p lang="ar">تمكين الطلاب وتعزيز علاقتهم بالإدارة الجامعية.</p>
-          <p lang="en">Empower students and strengthen ties with university administration.</p>
+          <h3 data-lang="ar">الرسالة</h3>
+          <h3 data-lang="en" hidden>Mission</h3>
+          <p data-lang="ar">تمكين الطلاب وتعزيز علاقتهم بالإدارة الجامعية.</p>
+          <p data-lang="en" hidden>Empower students and strengthen ties with university administration.</p>
         </article>
 
         <article class="card">
-          <h3 lang="ar">الأهداف</h3>
-          <h3 lang="en">Goals</h3>
-          <p lang="ar">التمثيل، القيادة، التفاعل المجتمعي، والدعوة.</p>
-          <p lang="en">Representation, leadership, community engagement, and advocacy.</p>
+          <h3 data-lang="ar">الأهداف</h3>
+          <h3 data-lang="en" hidden>Goals</h3>
+          <p data-lang="ar">التمثيل، القيادة، التفاعل المجتمعي، والدعوة.</p>
+          <p data-lang="en" hidden>Representation, leadership, community engagement, and advocacy.</p>
         </article>
 
         <article class="card">
-          <h3 lang="ar">التنظيم</h3>
-          <h3 lang="en">Structure</h3>
-          <p lang="ar">رئيس ونائب وقادة فرق ومنسقو الأنشطة والإعلام.</p>
-          <p lang="en">President, Vice President, team leads, and activity/media coordinators.</p>
+          <h3 data-lang="ar">التنظيم</h3>
+          <h3 data-lang="en" hidden>Structure</h3>
+          <p data-lang="ar">رئيس ونائب وقادة فرق ومنسقو الأنشطة والإعلام.</p>
+          <p data-lang="en" hidden>President, Vice President, team leads, and activity/media coordinators.</p>
         </article>
       </div>
     </div>
   </section>
 
   <!-- Events preview -->
-  <section aria-labelledby="events-h">
+  <section aria-labelledby="events-ar">
     <div class="container">
       <div class="section-head">
-        <h2 id="events-h" lang="ar">الفعاليات القادمة</h2>
-        <h2 id="events-h" lang="en">Upcoming Events</h2>
+        <h2 id="events-ar" data-lang="ar">الفعاليات القادمة</h2>
+        <h2 id="events-en" data-lang="en" hidden>Upcoming Events</h2>
         <a class="muted" href="/events.html">
-          <span lang="ar">تقويم الفعاليات</span>
-          <span lang="en">All events</span>
+          <span data-lang="ar">تقويم الفعاليات</span>
+          <span data-lang="en" hidden>All events</span>
         </a>
       </div>
 
       <div class="grid grid-3">
         <article class="card">
-          <h3 lang="ar">ورشة تخصصات خطوة</h3>
-          <h3 lang="en">Khotwa Majors Workshop</h3>
-          <p class="muted" lang="ar">IT، الأمن السيبراني، العلوم الحيوية، الأعمال.</p>
-          <p class="muted" lang="en">IT, Cybersecurity, Biosciences, Business.</p>
+          <h3 data-lang="ar">ورشة تخصصات خطوة</h3>
+          <h3 data-lang="en" hidden>Khotwa Majors Workshop</h3>
+          <p class="muted" data-lang="ar">IT، الأمن السيبراني، العلوم الحيوية، الأعمال.</p>
+          <p class="muted" data-lang="en" hidden>IT, Cybersecurity, Biosciences, Business.</p>
         </article>
 
         <article class="card">
-          <h3 lang="ar">بطولة البادل</h3>
-          <h3 lang="en">Padel Championship</h3>
-          <p class="muted" lang="ar">تنظيم رياضي طلابي – La Trobe Sports Centre.</p>
-          <p class="muted" lang="en">Student sports event – La Trobe Sports Centre.</p>
+          <h3 data-lang="ar">بطولة البادل</h3>
+          <h3 data-lang="en" hidden>Padel Championship</h3>
+          <p class="muted" data-lang="ar">تنظيم رياضي طلابي – La Trobe Sports Centre.</p>
+          <p class="muted" data-lang="en" hidden>Student sports event – La Trobe Sports Centre.</p>
         </article>
 
         <article class="card">
-          <h3 lang="ar">ماراثون داخل الحرم</h3>
-          <h3 lang="en">On-Campus Marathon</h3>
-          <p class="muted" lang="ar">مسارات 1K و2.5K و10K.</p>
-          <p class="muted" lang="en">1K, 2.5K, and 10K routes.</p>
+          <h3 data-lang="ar">ماراثون داخل الحرم</h3>
+          <h3 data-lang="en" hidden>On-Campus Marathon</h3>
+          <p class="muted" data-lang="ar">مسارات 1K و2.5K و10K.</p>
+          <p class="muted" data-lang="en" hidden>1K, 2.5K, and 10K routes.</p>
         </article>
       </div>
     </div>
@@ -209,25 +196,27 @@
   </footer>
 
   <script>
-    // إزالة no-js + سنة
-    document.documentElement.classList.remove('no-js');
+    // سنة الحقوق
     document.getElementById('year').textContent = new Date().getFullYear();
 
-    // تبديل اللغة via .en على <html> + تحديث dir/lang + نص الزر
-    const btn = document.getElementById('lang-toggle');
-    function setLang(lang){
-      const isEn = lang === 'en';
-      document.documentElement.classList.toggle('en', isEn);
-      document.documentElement.lang = isEn ? 'en' : 'ar';
-      document.documentElement.dir  = isEn ? 'ltr' : 'rtl';
-      btn.textContent = isEn ? 'العربية' : 'English';
+    // دالة تبديل اللغة باستخدام hidden (الأضمن لكل العناصر)
+    const toggleBtn = document.getElementById('lang-toggle');
+    let isEn = false; // عربي افتراضيًا
+
+    function setLang(en){
+      isEn = en;
+      // إظهار/إخفاء كل العناصر حسب data-lang
+      document.querySelectorAll('[data-lang="ar"]').forEach(el => el.hidden = en);
+      document.querySelectorAll('[data-lang="en"]').forEach(el => el.hidden = !en);
+      // خصائص html
+      document.documentElement.lang = en ? 'en' : 'ar';
+      document.documentElement.dir  = en ? 'ltr' : 'rtl';
+      // نص الزر
+      toggleBtn.textContent = en ? 'العربية' : 'English';
     }
-    // الحالة الافتراضية عربي
-    setLang('ar');
-    btn.addEventListener('click', ()=>{
-      const now = document.documentElement.classList.contains('en') ? 'ar' : 'en';
-      setLang(now);
-    });
+
+    toggleBtn.addEventListener('click',()=> setLang(!isEn));
+    setLang(false); // ابدأ بالعربي
   </script>
 </body>
 </html>
